--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,9 @@ dependencies:
   path_provider: ^2.0.6
   image_picker: "0.7.4"
   flutter_exif_rotation: ^0.5.1
-  jitsi_meet: ^3.0.0
+  # jitsi_meet: ^3.0.0
+  video_player: ^2.4.7
+  chewie: ^1.3.5
 
 dev_dependencies:
   flutter_test:
